2013-02-19  Charlie Zender  <zender@uci.edu>

	* ncrename requires presence of attributes in all variables when attribute is not
 	prefixed with dot, unless attribute is a global	or group attribute.

2013-02-16  Pedro Vicente  <pvicente@uci.edu>

	* ncks eliminate lmt_all array and replace with GTT (Group Traversal Table)
	structure that stores full path names for dimensions and coordinate variables.
	nco_xtr_wrt_trv() writes extracted data to output file
	nco_xtr_dfn_trv() defines extracted groups, variables, and attributes in output file
	nco_prn_var_val_trv() prints variable data

	* ncks limits are stored in the GTT dimension structure and MSA is applied.
	Distribute these to variables when writing with nco_msa_prn_var_val_trv().
	nco_bld_lmt_trv() assigns user specified dimension limits to traversal table dimensions.

2013-02-14  Pedro Vicente  <pvicente@uci.edu>

	* ncks --get_grp_info prints extended variable, coordinate variables and dimension information
	nco_bld_crd_var_trv() builds dimension information for all variables
	nco_var_dmn_scp() checks if variable is in dimension scope

	* ncks parses limits from dimension object associated functions:
	nco_bld_lmt_trv() Assign user specified dimension limits to traversal table dimensions

2013-02-13  Charlie Zender  <zender@uci.edu>

	* Copy grp_id_in and grp_id_out elements of traversal table
	variables into nm_id structure to enable MM3->MM4 and MM4->MM3.

2013-02-10  Charlie Zender  <zender@uci.edu>

	* NCO 4.2.6 release procedure:
 	Changes since nco-4_2_5: --rec_apn, non-atomic ignore
	cd ~/nco;cvs tag -d nco-4_2_6;cvs tag -d nco-4_2_6-1
	cd ~/nco;cvs commit -m "Preparing nco-4.2.6 release"
	cvs tag -c nco-4_2_6;cvs tag -c nco-4_2_6-1

	* Improve error message when appending variable with rank mismatch

2013-02-09  Charlie Zender  <zender@uci.edu>

	* Reformat metadata printing, include more max. depth, number variable attributes

2013-02-08  Charlie Zender  <zender@uci.edu>
